@@ -1,274 +1,239 @@
 package com.example.demo.service;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.http.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.hc.client5.http.impl.classic.HttpClients;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.*;
+import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestTemplate;
+// Option B (if you don't want Apache HttpClient):
+// import org.springframework.http.client.SimpleClientHttpRequestFactory;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * WeChat Mini Program Service
- * Handles WeChat Mini Program API interactions including:
- * - Access token management
- * - QR code generation (WeChat URL Scheme)
+ * - Access token caching
+ * - QR code generation via getwxacodeunlimit
+ * - Buffered JSON POST to avoid "412 Precondition Failed: [no body]"
  */
 @Service
 public class WeChatMiniProgramService {
-    
+
     private static final Logger log = LoggerFactory.getLogger(WeChatMiniProgramService.class);
-    
+
     @Value("${wechat.miniprogram.appid:wx351e2b055747fa78}")
     private String appId;
-    
+
     @Value("${wechat.miniprogram.secret:${MINI_APP_SECRET:}}")
     private String appSecret;
-    
-    private final RestTemplate restTemplate = new RestTemplate();
+
+    private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper = new ObjectMapper();
-    
-    // Cache for access token
+
+    /** ---- Access token cache ---- */
     private static class AccessTokenCache {
         String token;
-        long expiresAt;
-        
+        long expiresAtMillis;
         boolean isValid() {
-            return token != null && System.currentTimeMillis() < expiresAt;
+            return token != null && System.currentTimeMillis() < expiresAtMillis;
         }
     }
-    
-    private final AccessTokenCache accessTokenCache = new AccessTokenCache();
-    
+    private final AccessTokenCache tokenCache = new AccessTokenCache();
+
+    /** ---- Constructor: RestTemplate with buffered JSON body ---- */
+    public WeChatMiniProgramService() {
+        // Option A: Apache HttpClient (recommended)
+        var httpClient = HttpClients.custom().build();
+        var factory = new HttpComponentsClientHttpRequestFactory(httpClient);
+        factory.setConnectTimeout(10_000);
+        factory.setConnectionRequestTimeout(10_000);
+        factory.setReadTimeout(20_000);
+
+        RestTemplate rt = new RestTemplate(factory);
+
+        // Ensure JSON converter is present and prioritized
+        var converters = new ArrayList<>(rt.getMessageConverters());
+        converters.removeIf(c -> c instanceof MappingJackson2HttpMessageConverter);
+        converters.add(0, new MappingJackson2HttpMessageConverter());
+        rt.setMessageConverters(converters);
+
+        this.restTemplate = rt;
+
+        // ---- Option B (no Apache) ----
+        // this.restTemplate = buildBufferedRestTemplate();
+    }
+
+    // Option B: Use Spring's SimpleClientHttpRequestFactory with buffered request body
+    // private RestTemplate buildBufferedRestTemplate() {
+    //     var simple = new SimpleClientHttpRequestFactory();
+    //     simple.setBufferRequestBody(true);        // forces Content-Length (no chunked)
+    //     simple.setConnectTimeout(10_000);
+    //     simple.setReadTimeout(20_000);
+    //
+    //     RestTemplate rt = new RestTemplate(simple);
+    //     var converters = new ArrayList<>(rt.getMessageConverters());
+    //     converters.removeIf(c -> c instanceof MappingJackson2HttpMessageConverter);
+    //     converters.add(0, new MappingJackson2HttpMessageConverter());
+    //     rt.setMessageConverters(converters);
+    //     return rt;
+    // }
+
+    /** ---- Public API ---- */
+
     /**
-     * Get WeChat access token (cached)
-     * Token is valid for 2 hours, we refresh 5 minutes before expiry
+     * Generate a Mini Program QR Code.
+     * @param token your long invite token or group id
+     * @param forceHomepage If true, omit "page" and set "check_path=false" so it always opens the app and you route by scene.
+     * @return data URL (image/png base64) on success; fallback QR URL on failure.
+     */
+    public String generateMiniProgramQRCode(String token, boolean forceHomepage) throws Exception {
+        log.info("🔍 Start WeChat QR generation, token={}", token);
+
+        String accessToken = getAccessToken();
+        String url = "https://api.weixin.qq.com/wxa/getwxacodeunlimit?access_token=" + accessToken;
+
+        String scene = createScene(token);
+
+        Map<String, Object> reqBody = new LinkedHashMap<>();
+        reqBody.put("scene", scene);               // ≤ 32 chars, ASCII-safe
+        if (forceHomepage) {
+            // Don’t validate the page; route programmatically by scene in app.js
+            reqBody.put("check_path", false);
+            // Optional: open trial/release version explicitly
+            // reqBody.put("env_version", "release"); // or "trial" / "develop"
+        } else {
+            // Ensure this page exists in your uploaded code package
+            reqBody.put("page", "pages/signup/signup");
+        }
+        reqBody.put("width", 430);
+        reqBody.put("auto_color", false);
+        reqBody.put("is_hyaline", false);
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setAccept(List.of(MediaType.IMAGE_PNG, MediaType.ALL));
+        HttpEntity<Map<String, Object>> httpEntity = new HttpEntity<>(reqBody, headers);
+
+        try {
+            log.info("📤 POST {}  body={}", url, reqBody);
+            ResponseEntity<byte[]> resp = restTemplate.exchange(url, HttpMethod.POST, httpEntity, byte[].class);
+            MediaType ct = resp.getHeaders().getContentType();
+            byte[] body = resp.getBody();
+            log.info("📥 status={} ct={}", resp.getStatusCode(), ct);
+
+            // Error if non-2xx, empty body, or JSON/text content
+            if (!resp.getStatusCode().is2xxSuccessful() || body == null || body.length == 0 ||
+                (ct != null && (ct.includes(MediaType.APPLICATION_JSON) || ct.includes(MediaType.TEXT_PLAIN)))) {
+                String err = (body == null ? "" : new String(body));
+                log.error("❌ WeChat QR error: status={} ct={} body={}", resp.getStatusCode(), ct, err);
+                return generateFallbackQRCode(token);
+            }
+
+            // Extra guard: WeChat sometimes returns JSON without proper content-type
+            if (body[0] == '{') {
+                String err = new String(body);
+                log.error("❌ WeChat QR JSON error payload: {}", err);
+                return generateFallbackQRCode(token);
+            }
+
+            String base64 = Base64.getEncoder().encodeToString(body);
+            String dataUrl = "data:image/png;base64," + base64;
+            log.info("✅ QR generated, bytes={}", body.length);
+            return dataUrl;
+
+        } catch (HttpClientErrorException e) {
+            log.error("❌ HTTP error: {} - {}", e.getStatusCode(), e.getMessage());
+            log.error("Body: {}", e.getResponseBodyAsString());
+            return generateFallbackQRCode(token);
+        } catch (Exception e) {
+            log.error("❌ Exception calling WeChat QR API", e);
+            return generateFallbackQRCode(token);
+        }
+    }
+
+    /** ---- Access token (cached) ---- */
+
+    /**
+     * Get WeChat access token (cached; refresh 5 min early).
      */
     public String getAccessToken() throws Exception {
-        // Return cached token if still valid
-        if (accessTokenCache.isValid()) {
-            return accessTokenCache.token;
-        }
-        
-        // Validate configuration
+        if (tokenCache.isValid()) return tokenCache.token;
+
         if (appSecret == null || appSecret.isEmpty()) {
-            throw new IllegalStateException(
-                "WeChat Mini Program AppSecret not configured. " +
-                "Please set MINI_APP_SECRET environment variable on Render."
-            );
+            throw new IllegalStateException("WeChat Mini Program AppSecret not configured. Set MINI_APP_SECRET env var.");
         }
-        
-        log.info("Fetching new WeChat access token...");
-        log.info("AppID: {}", appId);
-        log.info("AppSecret configured: {}", (appSecret != null && !appSecret.isEmpty()));
-        
-        // Request new token from WeChat API
-        String url = String.format(
-            "https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=%s&secret=%s",
-            appId, appSecret
-        );
-        
-        log.info("Calling WeChat token API...");
-        
+
+        String url = "https://api.weixin.qq.com/cgi-bin/token"
+                + "?grant_type=client_credential"
+                + "&appid=" + appId
+                + "&secret=" + appSecret;
+
         try {
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            log.info("WeChat token API response status: {}", response.getStatusCode());
-            
-            if (response.getStatusCode() == HttpStatus.OK) {
-                Map<String, Object> result = objectMapper.readValue(
-                    response.getBody(), 
-                    Map.class
-                );
-                
-                if (result.containsKey("access_token")) {
-                    String token = (String) result.get("access_token");
-                    Integer expiresIn = (Integer) result.get("expires_in"); // Usually 7200 seconds (2 hours)
-                    
-                    // Cache token, refresh 5 minutes before expiry
-                    accessTokenCache.token = token;
-                    accessTokenCache.expiresAt = System.currentTimeMillis() + ((expiresIn - 300) * 1000L);
-                    
-                    log.info("✅ WeChat access token obtained, expires in {} seconds", expiresIn);
-                    return token;
-                } else {
-                    Integer errcode = (Integer) result.get("errcode");
-                    String errmsg = (String) result.get("errmsg");
-                    throw new Exception("WeChat API error: " + errcode + " - " + errmsg);
-                }
-            } else {
-                throw new Exception("Failed to get access token: HTTP " + response.getStatusCode());
+            ResponseEntity<String> resp = restTemplate.getForEntity(url, String.class);
+            if (!resp.getStatusCode().is2xxSuccessful()) {
+                throw new RuntimeException("Token HTTP " + resp.getStatusCode());
             }
-        } catch (org.springframework.web.client.HttpClientErrorException e) {
-            log.error("❌ WeChat API HTTP Error: {} - {}", e.getStatusCode(), e.getMessage());
-            log.error("Response body: {}", e.getResponseBodyAsString());
-            if (e.getStatusCode().value() == 412) {
-                throw new Exception("WeChat API 412 Error - Possible causes: Wrong AppSecret, IP not whitelisted, or mini program not verified", e);
+            Map<?, ?> map = objectMapper.readValue(resp.getBody(), Map.class);
+            if (map.get("access_token") == null) {
+                throw new RuntimeException("Token error: " + resp.getBody());
             }
-            throw new Exception("Failed to get WeChat access token: " + e.getMessage(), e);
+            String token = String.valueOf(map.get("access_token"));
+            int expiresIn = (map.get("expires_in") instanceof Number)
+                    ? ((Number) map.get("expires_in")).intValue()
+                    : 7200;
+
+            tokenCache.token = token;
+            tokenCache.expiresAtMillis = System.currentTimeMillis() + Math.max(0, (expiresIn - 300)) * 1000L;
+
+            log.info("✅ Access token obtained. expiresIn={}s", expiresIn);
+            return token;
         } catch (Exception e) {
-            log.error("❌ Failed to get WeChat access token", e);
-            throw new Exception("Failed to get WeChat access token: " + e.getMessage(), e);
+            log.error("❌ Failed to fetch access_token", e);
+            throw e;
         }
     }
-    
+
+    /** ---- Helpers ---- */
+
     /**
-     * Create a short scene parameter from token (max 32 characters for WeChat)
+     * Build a 32-char-safe scene value (ASCII only).
      */
     private String createScene(String token) {
-        // Remove "group_" prefix to save space
-        String shortToken = token.replace("group_", "g");
-        
-        // Ensure scene parameter is within WeChat's 32 character limit
-        String scene = "t=" + shortToken;
-        if (scene.length() > 32) {
-            // Take first 30 chars of token (leaving 2 for "t=")
-            shortToken = shortToken.substring(0, 30);
-            scene = "t=" + shortToken;
-        }
-        
-        log.info("📏 Scene created: '{}' (length: {})", scene, scene.length());
+        String shortToken = token == null ? "" : token.replace("group_", "g");
+        shortToken = shortToken.replaceAll("[^A-Za-z0-9_-]", "");
+        if (shortToken.length() > 30) shortToken = shortToken.substring(0, 30);
+        String scene = "t_" + shortToken; // keep format simple, avoid '=' to dodge WAFs
+        log.info("📏 Scene='{}' (len={})", scene, scene.length());
         return scene;
     }
 
     /**
-     * Generate WeChat Mini Program QR Code using QR Code API
-     * 
-     * @param token Group invite token
-     * @return QR code image URL or data
-     */
-    public String generateMiniProgramQRCode(String token) throws Exception {
-        log.info("🔍 Starting WeChat QR code generation for token: {}", token);
-        
-        String accessToken;
-        try {
-            accessToken = getAccessToken();
-            log.info("✅ Got access token: {}...", accessToken.substring(0, Math.min(10, accessToken.length())));
-        } catch (Exception e) {
-            log.error("❌ Failed to get access token: {}", e.getMessage());
-            throw e;
-        }
-        
-        // WeChat Mini Program QR Code API
-        String url = "https://api.weixin.qq.com/wxa/getwxacodeunlimit?access_token=" + accessToken;
-        log.info("📡 Calling WeChat QR Code API: {}", url.substring(0, url.indexOf("access_token=") + 20) + "...");
-        
-        // Create scene parameter (must be ≤ 32 characters)
-        String scene = createScene(token);
-        
-        // Build request body for QR Code API
-        Map<String, Object> requestBody = new HashMap<>();
-        requestBody.put("scene", scene); // Scene parameter (≤ 32 chars)
-        requestBody.put("page", "pages/signup/signup"); // Target page
-        requestBody.put("width", 430); // QR code width
-        requestBody.put("auto_color", false);
-        requestBody.put("is_hyaline", false);
-        
-        log.info("📤 Request body: {}", requestBody);
-        
-        try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
-            headers.setAccept(java.util.List.of(MediaType.IMAGE_PNG, MediaType.ALL));
-            
-            HttpEntity<Map<String, Object>> request = new HttpEntity<>(requestBody, headers);
-            
-            log.info("🚀 Sending POST request to WeChat QR Code API...");
-            
-            // Use exchange for better control over response handling
-            ResponseEntity<byte[]> response = restTemplate.exchange(url, HttpMethod.POST, request, byte[].class);
-            log.info("📥 Response status: {}", response.getStatusCode());
-            
-            MediaType contentType = response.getHeaders().getContentType();
-            log.info("📥 Response content type: {}", contentType);
-            
-            byte[] responseBody = response.getBody();
-            
-            // Check if WeChat returned JSON error instead of image
-            if (contentType != null && (contentType.includes(MediaType.APPLICATION_JSON) || 
-                                      contentType.includes(MediaType.TEXT_PLAIN))) {
-                String errorJson = responseBody != null ? new String(responseBody) : "No error details";
-                log.error("❌ WeChat API returned JSON error: {}", errorJson);
-                return generateFallbackQRCode(token);
-            }
-            
-            if (response.getStatusCode().is2xxSuccessful() && responseBody != null && responseBody.length > 0) {
-                // Additional check: if response starts with '{', it's likely JSON error
-                if (responseBody[0] == '{') {
-                    String errorJson = new String(responseBody);
-                    log.error("❌ WeChat API returned JSON error (detected by content): {}", errorJson);
-                    return generateFallbackQRCode(token);
-                }
-                
-                log.info("✅ WeChat QR Code generated successfully, size: {} bytes", responseBody.length);
-                
-                // Convert to base64 data URL for immediate use
-                String base64Image = java.util.Base64.getEncoder().encodeToString(responseBody);
-                String dataUrl = "data:image/png;base64," + base64Image;
-                
-                log.info("✅ QR Code converted to data URL");
-                
-                return dataUrl;
-            } else {
-                log.error("❌ Failed to generate QR Code: HTTP {}", response.getStatusCode());
-                return generateFallbackQRCode(token);
-            }
-        } catch (org.springframework.web.client.HttpClientErrorException e) {
-            log.error("❌ WeChat URL Scheme API Error: {} - {}", e.getStatusCode(), e.getMessage());
-            log.error("Response body: {}", e.getResponseBodyAsString());
-            log.error("Request was: POST {} with body: {}", url.substring(0, Math.min(100, url.length())), requestBody);
-            
-            if (e.getStatusCode().value() == 412) {
-                log.error("⚠️ HTTP 412 Error - Possible causes:");
-                log.error("  1. URL Scheme API not enabled in WeChat admin panel");
-                log.error("  2. Mini program not published/verified");
-                log.error("  3. Path 'pages/signup/signup' doesn't exist in mini program");
-                log.error("  4. Mini program configuration incomplete");
-            }
-            
-            return generateFallbackQRCode(token);
-        } catch (Exception e) {
-            log.error("❌ Exception generating WeChat QR code: {} - {}", e.getClass().getName(), e.getMessage());
-            log.error("Full stack trace:", e);
-            return generateFallbackQRCode(token);
-        }
-    }
-    
-
-    
-    /**
-     * Fallback QR code generation (old method)
-     * Used if WeChat API fails
+     * Fallback QR (public service) if WeChat fails.
      */
     private String generateFallbackQRCode(String token) {
         log.warn("⚠️ Using fallback QR code generation");
-        String miniProgramPath = "pages/signup/signup?token=" + token;
-        try {
-            String encodedPath = java.net.URLEncoder.encode(miniProgramPath, "UTF-8");
-            return "https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=" + encodedPath;
-        } catch (Exception e) {
-            return "https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=" + miniProgramPath;
-        }
+        String path = "pages/signup/signup?token=" + (token == null ? "" : token);
+        String encoded = URLEncoder.encode(path, StandardCharsets.UTF_8);
+        return "https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=" + encoded;
     }
-    
-    /**
-     * Check if WeChat Mini Program service is properly configured
-     */
+
     public boolean isConfigured() {
         return appSecret != null && !appSecret.isEmpty();
     }
-    
-    /**
-     * Get configuration status for debugging
-     */
+
     public Map<String, Object> getConfigStatus() {
-        Map<String, Object> status = new HashMap<>();
-        status.put("appId", appId);
-        status.put("secretConfigured", appSecret != null && !appSecret.isEmpty());
-        status.put("accessTokenCached", accessTokenCache.isValid());
-        return status;
+        Map<String, Object> m = new LinkedHashMap<>();
+        m.put("appId", appId);
+        m.put("secretConfigured", appSecret != null && !appSecret.isEmpty());
+        m.put("accessTokenCached", tokenCache.isValid());
+        return m;
     }
 }
